# test-hyphenation

./: .gitignore  .timestamps.json  Abenduniversität.txt  README.md  ___Cheat-Sheet.txt  ___install.txt  ___start.txt  __mypy-main.txt  __mypy.py  __package_tree.txt  __tree.txt  _basedpyright.py  _mypy.py  _pyright.py  dic.py  hyph_de_DE.dic  hyphenate.py  info.txt  main.py  patch.txt  pattern.txt  pyproject.toml  requirements.txt  ruff.toml
.type-check-result/: mypy-src.txt  pyright-src.txt
_info/: hyphenate.py  info.txt
_info/_old/: __init__##.py  dic.py  patch.txt
_info/_tests/: Abenduniversität.txt  Encyclopedia.txt  Morgenstern.txt  Nennwertherabsetzung.txt  pattern.txt
_tests/: Abenduniversität.txt  Nennwertherabsetzung.txt  Test.odt  dictionaries.json  hyph_de_DE.dic
data/: _hyph_de.dic  dictionaries.json  hyph_de_DE.dic
dict/: dictionaries.json  hyph_de_DE.dic
material/: info.txt
results/: .gitignore  PyHypen-PATCH-de_DE_frami.json  PyHypen-PATCH-test_sample_2024-11-11_11-01-12.json  PyHypen-PATCH-wortliste.json  PyHypen-Python-differencesde_DE_frami.json  PyHypen-Python-differencestest_sample-2024-11-11_09-55-58.json  PyHyphen-AlleDeutschenWoerter.json  PyHyphen-test_sample_2024-11-11_11-01-13.json  PyHyphen_COMPLETE_samples.json  PyHyphen_PATCH_AlleDeutschenWoerter.json  PyHyphen_PATCH_de_DE_frami.json  PyHyphen_PATCH_samples.json  Pyphen-PyHyphen_DIFF_AlleDeutschenWoerter.json  Pyphen-PyHyphen_DIFF_de_DE_frami.json  Pyphen-PyHyphen_DIFF_samples.json  Pyphen-PyHyphen_DIFF_wortliste.json  Pyphen-test_sample_2024-11-11_11-01-14.json  Pyphen_COMPLETE_AlleDeutschenWoerter.json  Pyphen_COMPLETE_samples.json
results/de_DE/: .gitignore
samples/: samples.yaml
samples/de_DE/: samples.yaml
settings/: settings.yaml
src/: hyphen.py  main.py  pyphen.py  samples.py  words.py
src/helper/: pyhyphen.py  pyphen.py  samples.py
src/main/: hyphen.py  pyphen.py
(+16 files in other folders)
