[project]
name = "hyphenation-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "certifi>=2024.12.14",
    "orjson>=3.10.12",
    "pyhyphen>=4.0.4",
    "pyphen>=0.17.0",
    "pyyaml>=6.0.2",
    "result>=0.17.0",
]
